<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff9473B6"
        >
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/app_name"
            android:textColor="#ffffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            />
        <ImageButton
            android:id="@+id/editButton"
            android:src="@drawable/edit_icon"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/edit_button_description"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:padding="12dp"
            android:background="#00000000"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mainInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar"
        android:background="#ff9473B6"
        >
        <ImageView
            android:id="@+id/profilePicture"
            android:layout_centerHorizontal="true"
            android:src="@drawable/white_cercle"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/profile_picture_description"
            />
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePicture"
            android:layout_centerHorizontal="true"
            android:text="@string/username"
            android:textColor="#ffffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            />
        <TextView
            android:id="@+id/telephoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:layout_centerHorizontal="true"
            android:text="@string/phone_number"
            android:textColor="#ffffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="16dp"
            />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mainInfo"
        android:background="#ffffffff">

        <RelativeLayout android:id="@+id/scrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:background="@drawable/small_card_background"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:layout_marginBottom="16dp"
                />
            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailAddress"
                android:text="@string/address"
                android:background="@drawable/medium_card_background"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:layout_marginBottom="16dp"
                android:lines="4"
                />
            <TextView
                android:id="@+id/identityDocument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:text="@string/identity_document"
                android:background="@drawable/small_card_background"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:layout_marginBottom="16dp"
                />
            <TextView
                android:id="@+id/shortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/identityDocument"
                android:text="@string/short_description"
                android:background="@drawable/medium_card_background"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:layout_marginBottom="16dp"
                android:lines="5"
                />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>
