<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title=""
        app:titleTextColor="@color/colorWhite"
        app:navigationIcon="@drawable/back_icon"
        android:theme="@style/MyActionBarTheme">
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/edit_profile_pictures"
        android:layout_below="@+id/editToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:padding="32dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_picture"
            android:layout_centerInParent="true"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/default_user_icon"
            android:contentDescription="@string/profile_picture_description"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFFFF"
            />

        <ImageButton
            android:id="@+id/edit_profile_picture_button"
            android:src="@drawable/photo_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="12dp"
            android:layout_alignEnd="@+id/edit_profile_picture"
            android:layout_alignBottom="@+id/edit_profile_picture"
            />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/edit_scroll_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edit_profile_pictures"
        >

        <RelativeLayout android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/edit_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textPersonName"
                android:hint="@string/first_name"
                />

            <EditText
                android:id="@+id/edit_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_firstName"
                android:layout_marginBottom="16dp"
                android:inputType="textPersonName"
                android:hint="@string/last_name"
                />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_lastName"
                android:layout_marginBottom="16dp"
                android:inputType="phone"
                android:hint="@string/phone_number"
                />

            <EditText
                android:id="@+id/edit_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_phone_number"
                android:layout_marginBottom="16dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                />

            <EditText
                android:id="@+id/edit_identity_document"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_email_address"
                android:layout_marginBottom="16dp"
                android:inputType="textCapCharacters"
                android:hint="@string/identity_document"
                />

            <EditText
                android:id="@+id/edit_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_identity_document"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:lines="5"
                android:hint="@string/short_description"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>